added filter functionality

--- a/templates/components/_navigation.html.twig
+++ b/templates/components/_navigation.html.twig
@@ -10,12 +10,12 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item d-lg-none">
-              <a class="btn btn-primary" aria-current="page" href="actions/logout.php?logout">Logout</a>
+              <a href="{{ path('events_new') }}" class="btn btn-primary my-auto">Add Event</a>
             </li>
         </ul>
       </div>
       <div class="ml-auto d-none d-lg-inline-block">
-        <a class="btn btn-primary" aria-current="page" href="actions/logout.php?logout">Logout</a></div>
+        <a href="{{ path('events_new') }}" class="btn btn-primary my-auto">Add Event</a>
       </div>
     </div>
   </nav>
